--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -71,14 +71,14 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FKWQWWB7\\Bradford et al. - 2000 - Reference points for coho salmon ( iOncorhynchus.pdf}
 }
 
-@article{bradfordReviewBiologicalPrinciples2004a,
-  title = {A Review of Biological Principles and Methods Involved in Setting Minimum Population Sizes and Recovery Objectives for {{September}} 2004 Drafts of the {{Cultus}} and {{Sakinaw Lake}} Sockeye Salmon and {{Interior Fraser}} Coho Salmon Recovery Plans},
-  author = {Bradford, Michael J. and Wood, Chris},
+@techreport{bradfordReviewBiologicalPrinciples2004,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+  title = {A Review of Biological Principles and Methods Involved in Setting Minimum Population Sizes and Recovery Objectives for the {{September}} 2004 Drafts of the {{Cultus}} and {{Sakinaw Lake}} Sockeye Salmon and {{Interior Fraser}} Coho Salmon Recovery Plans},
+  author = {Bradford, M J and Wood, C},
   year = {2004},
-  journal = {Can. Sci. Advis. Sec. Res. Doc.},
-  volume = {2004/128},
-  pages = {48},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\B3X6RF76\\Bradford2014.pdf}
+  number = {2004/128},
+  pages = {iv + 48},
+  abstract = {The purpose of this paper is to review the scientific basis for the recovery objectives contained in the September 2004 draft recovery plans for Cultus and Sakinaw Lake sockeye salmon and Interior Fraser coho salmon. First, a brief review of recovery objectives for a variety of other North American salmonid recovery plans was conducted, and we concluded that the objectives of the 3 plans were consistent with current practice; the main difference was that the objectives were more quantitative than was usual in other jurisdictions. Next, objectives that were developed for purpose of conserving genetic resources in the endangered populations were compared to the recent literature and were found to be minimally adequate. In a review of population viability analysis (PVA) and its application to setting conservation targets, we concluded that demographically-based conservation goals in the order of 1,000 annual spawners was only adequate if there was an additional objective of maintaining positive population growth. We detailed and reviewed the evidence for depensatory mortality in Cultus Lake on juvenile sockeye salmon and concurred with the recovery team that there was reason to be concerned that at low spawner abundance reduced smolt production rates could inhibit recovery. Lastly, we documented the evidence used to develop a total escapement estimate for Interior Fraser coho salmon that would meet recovery objectives for individual populations and sub-populations. A comparison of the recovery objectives with recent historical abundances indicates that the recovery targets for the 3 salmon populations are all less than one third of recent maxima. Thus the teams have been consistent in interpreting recovery as an abundance at the lower range of the spectrum of values they might have considered, well below the carrying capacity of their habitats. We conclude that there is a need to develop plans to maintain population productivity to ensure persistence at the proposed recovery targets.}
 }
 
 @techreport{bradfordStatusCultusLake2010,
@@ -138,14 +138,15 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3AVX36CQ\\Chaput et al. - Considerations for defining reference points for s.pdf}
 }
 
-@article{chaputConsiderationsDefiningReference2015,
-  title = {Considerations for Defining Reference Points for {{Atlantic Salmon}} That Conform to the {{Precautionary Approach}}},
-  author = {Chaput, G},
-  year = {2015},
-  volume = {2015/074},
-  pages = {49},
+@article{chenIncorporatingAlleeEffects2002a,
+  title = {Incorporating {{Allee}} Effects in Fish Stock\textendash{} Recruitment Models and Applications for Determining Reference Points},
+  author = {Chen, D G and Irvine, J R and Cass, A J},
+  year = {2002},
+  volume = {59},
+  pages = {8},
+  abstract = {A new type of stock\textendash recruitment model is examined that incorporates Allee effects, which may occur when fish populations are small. The model is a natural extension of traditional models, which only incorporate the negative effects of increasing density on fecundity and (or) survival. Because the new model is intrinsically nonlinear and because of convergence problems at local optima, we use a maximum likelihood approach with a global genetic search algorithm to estimate model parameters. Parameter uncertainty is obtained from the inverse of the Fisher information matrix. Based on this new model, an extinction probability curve is developed using the parameter defining the Allee effects. This curve can readily be used to calculate the theoretical probability of extinction for a single brood line in one generation for any particular spawner number or biomass. Alternatively, because managers may wish to assign reference points corresponding to particular extinction probabilities, spawner numbers can be determined for these reference points. Two Pacific salmon populations, North Thompson coho (Oncorhynchus kisutch) and Chilko sockeye (O. nerka), are used to demonstrate the approach. It is found that the Allee effect parameter is statistically significant for the Thompson coho, but not for Chilko sockeye.},
   langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KFDH5KB5\\Chaput - Considerations for defining reference points for A.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\R6ACK3AK\\Chen et al. - 2002 - Incorporating Allee effects in fish stock– recruit.pdf}
 }
 
 @article{collieHarvestStrategiesClimateresilient2021,
@@ -165,6 +166,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\P7X5J85A\\Collie et al. - 2021 - Harvest strategies for climate-resilient fisheries.pdf}
 }
 
+@article{connorsClimateCompetitionInfluence2020,
+  title = {Climate and Competition Influence Sockeye Salmon Population Dynamics across the {{Northeast Pacific Ocean}}},
+  author = {Connors, Brendan and Malick, Michael J. and Ruggerone, Gregory T. and Rand, Pete and Adkison, Milo and Irvine, James R. and Campbell, Robert and Gorman, Kristen},
+  year = {2020},
+  month = jun,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {77},
+  number = {6},
+  pages = {943--949},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/cjfas-2019-0422},
+  abstract = {Pacific salmon productivity is influenced by ocean conditions and interspecific interactions, yet their combined effects are poorly understood. Using data from 47 North American sockeye salmon (Oncorhynchus nerka) populations, we present evidence that the magnitude and direction of climate and competition effects vary over large spatial scales. In the south, a warm ocean and abundant salmon competitors combined to strongly reduce sockeye productivity, whereas in the north, a warm ocean substantially increased productivity and offset the negative effects of competition at sea. From 2005 to 2015, the approximately 82 million adult pink salmon (Oncorhynchus gorbuscha) produced annually from hatcheries were estimated to have reduced the productivity of southern sockeye salmon by ϳ15\%, on average. In contrast, for sockeye at the northwestern end of their range, the same level of hatchery production was predicted to have reduced the positive effects of a warming ocean by ϳ50\% (from a ϳ10\% to a ϳ5\% increase in productivity, on average). These findings reveal spatially dependent effects of climate and competition on sockeye productivity and highlight the need for international discussions about large-scale hatchery production.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\MSHVKXPB\\Connors et al. - 2020 - Climate and competition influence sockeye salmon p.pdf}
+}
+
 @article{cookFrameworkAssessmentOffshore2017,
   title = {Framework {{Assessment}} of the {{Offshore American Lobster}} ({{Homarus}} Americanus) in {{Lobster Fishing Area}} ({{LFA}}) 41},
   author = {Cook, Adam M and {Da-Ros}, Manon Cassista and Denton, Cheryl},
@@ -172,6 +189,21 @@
   pages = {194},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
+}
+
+@article{defilippoImprovingShorttermRecruitment2021,
+  title = {Improving Short-Term Recruitment Forecasts for Coho Salmon Using a Spatiotemporal Integrated Population Model},
+  author = {DeFilippo, Lukas B. and Buehrens, Thomas W. and Scheuerell, Mark and Kendall, Neala W. and Schindler, Daniel E.},
+  year = {2021},
+  month = oct,
+  journal = {Fisheries Research},
+  volume = {242},
+  pages = {106014},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2021.106014},
+  abstract = {Fishery managers often rely on forecasts of future population abundance to set allowable harvest quotas or exploitation rates. While there has been substantial research devoted to identifying environmental factors that can predict recruitment for individual populations, such correlations often degrade over time, thereby limiting their utility for management. Conversely, examining multiple populations at once to detect shared, spatially structured patterns can offer insights into their recruitment dynamics that are advantageous for forecasting. Here, we develop a population dynamics model for natural origin coho salmon (Oncorhynchus kisutch) stocks in Washington State that leverages spatial and temporal autocorrelation in marine survival to improve one-yearahead forecasts of adult returns. Executed in a Bayesian hierarchical integrated modelling framework, our spatiotemporal approach incorporates multiple data types and shares information among stocks to estimate key biological parameters that are informative for forecasting. Retrospective evaluation of one-year-ahead forecast skill indicated that the spatiotemporal integrated population model (ST-IPM) outperformed existing forecasts of Washington State coho salmon returns by 25\textendash 38 \% on average. Moreover, the ST-IPM estimates parameters that were previously non-identifiable for many stocks, and propagates uncertainty from multiple contributing data sources into model forecasts. Our results add to a growing body of work demonstrating the utility of spatio\- temporal and integrated approaches for modelling population dynamics, and the framework developed here has broad applications to the assessment and management of coho salmon in Washington State and elsewhere throughout their range.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\GDYLNPH2\\DeFilippo et al. - 2021 - Improving short-term recruitment forecasts for coh.pdf}
 }
 
 @techreport{dfoCanadaPolicyConservation2005a,
@@ -187,12 +219,18 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
 }
 
-@article{dfoGuidanceAssessingThreats2014,
+@techreport{dfoFisheryDecisionMakingFramework2009,
+  title = {A {{Fishery Decision}}-{{Making Framework Incorporating}} the {{Precautionary Approach}}},
+  author = {DFO},
+  year = {2009}
+}
+
+@techreport{dfoGuidanceAssessingThreats2014,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}.},
   title = {Guidance on {{Assessing Threats}}, {{Ecological Risk}} and {{Ecological Impacts}} for {{Species}} at {{Risk}}},
   author = {DFO},
   year = {2014},
-  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
-  volume = {2014/013 (Erratum: June 2016)},
+  number = {2014/013 (Erratum: June 2016)},
   pages = {21},
   abstract = {Threat Assessment \textbullet{} For species assessed as Extirpated, Endangered or Threatened by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), the assessment and prioritization of threats to survival and/or recovery of the species needs to be provided in the Recovery Potential Assessment (RPA).},
   langid = {english},
@@ -207,10 +245,11 @@
 }
 
 @techreport{dfoIntegratedBiologicalStatus2016,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}.},
   title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
-  number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2016/042},
+  number = {2016/042},
   pages = {15},
   langid = {english}
 }
@@ -227,12 +266,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\YVC856LV\\Science Advice for Precautionary Approach Harvest .pdf}
 }
 
-@article{dfoScienceGuidelinesSupport2021,
+@techreport{dfoScienceGuidelinesSupport2021,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
   title = {Science {{Guidelines}} to {{Support Development}} of {{Rebuilding Plans}} for {{Canadian Fish Stocks}}},
   author = {DFO},
   year = {2021},
-  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
-  volume = {2021/006},
+  number = {2021/006},
   pages = {20},
   abstract = {Under the revised Fisheries Act a rebuilding plan is required when a stock falls to or below its Limit Reference Point (LRP). The LRP should be avoided with high probability to reduce the risk of serious harm and management actions to prevent further decline in stock status should be implemented before this point is reached.},
   langid = {english},
